cluster/core/postgres/zalando-operator/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgo-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgo.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: zalando-postgres-operator-ui
          namespace: postgres
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "pgo-${SECRET_DOMAIN/./-}-tls"
